# CPPVideogame

./: Armor.h  CMakeLists.txt  Character.cpp  Character.h  ExperienceBar.cpp  ExperienceBar.h  Game.cpp  Game.h  Hero.cpp  Hero.h  MeleeWeapon.h  Mob.cpp  Mob.h  NPC.cpp  NPC.h  Observer.h  Potion.cpp  Potion.h  Projectile.cpp  Projectile.h  README.md  RangedWeapon.h  Scroll.h  Settings.cpp  Settings.h  StatusBar.cpp  StatusBar.h  Strategy.cpp  Strategy.h  Subject.h  TileMap.cpp  TileMap.h  Weapon.h  main.cpp
test/: CMakeLists.txt  HeroTests.cpp  MobTests.cpp  NPCTest.cpp
